# Algorithm-Visualizer

./: CMakeLists.txt  README.MD
extlibs/gif-h/: gif.cpp  gif.h
src/: main.cpp
src/Algorithm/: AlgTypesEnum.cpp  AlgTypesEnum.hpp  Algorithm.hpp  BubbleSort.cpp  BubbleSort.hpp  InsertSort.cpp  InsertSort.hpp  SelectionSort.cpp  SelectionSort.hpp
src/AlgorithmVisualizer/: AlgorithmVisualizer.cpp  AlgorithmVisualizer.hpp
src/Algorithms/: algorithms.hpp  test.cpp
src/Algorithms/BubbleSort/: BubbleSort.cpp  BubbleSort.hpp
src/Algorithms/InsertSort/: InsertSort.hpp
src/Algorithms/SelectionSort/: SelectionSort.hpp
src/Helpers/: Helpers.cpp  Helpers.hpp
